--- a/app/src/main/res/layout/activity_add_text_draft_page.xml
+++ b/app/src/main/res/layout/activity_add_text_draft_page.xml
@@ -35,7 +35,7 @@
 
 
     <EditText
-        android:id="@+id/TitleText"
+        android:id="@+id/TitleTextD"
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginStart="32dp"
@@ -56,10 +56,10 @@
         app:layout_constraintTop_toBottomOf="@+id/Add_Text_Page" />
 
     <EditText
-        android:id="@+id/draftMsg"
+        android:id="@+id/SubjtextD"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_below="@id/TitleText"
+        android:layout_below="@id/TitleTextD"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
@@ -79,7 +79,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TitleText" />
+        app:layout_constraintTop_toBottomOf="@+id/TitleTextD" />
 
     <Button
         android:id="@+id/ConfirmTextDraft"
