--- a/app/src/main/res/layout/activity_text_draft_view.xml
+++ b/app/src/main/res/layout/activity_text_draft_view.xml
@@ -35,7 +35,7 @@
 
 
         <TextView
-            android:id="@+id/draftMsg"
+            android:id="@+id/SubjtextD"
             android:layout_width="300dp"
             android:layout_height="300dp"
             android:layout_below="@id/draftTitle"
@@ -53,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="delete"
-            android:layout_below="@id/draftMsg"
+            android:layout_below="@id/SubjtextD"
             android:layout_marginTop="40dp"
             android:textColor="@color/recorder_bg"></TextView>
 
