--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -94,6 +94,36 @@
             android:textStyle="bold" />
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:padding="20dp">
+
+        <TextView
+            android:id="@+id/tips"
+            android:layout_width="153dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="@font/montserrat"
+            android:text="@string/tips"
+            android:textColor="#817889"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tipText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_marginRight="130dp"
+            android:layout_weight="1"
+            android:fontFamily="@font/montserrat"
+            android:text="keep calm"
+            android:textColor="@color/colorAccent"
+            android:textSize="15sp"
+            android:textStyle="normal" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -113,12 +143,29 @@
             android:textStyle="bold"
             android:layout_marginBottom="15dp"/>
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycleView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/empty"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat"
+            android:text="@string/empty"
+            android:textColor="#817889"
+            android:textSize="15sp"
+            android:textStyle="normal"
+            android:layout_marginBottom="15dp"/>
 
-        <androidx.cardview.widget.CardView
+       <!-- <androidx.cardview.widget.CardView
+            android:id="@+id/AppointmentBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="#F3F3F3">
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -153,7 +200,7 @@
                         android:text="( 04:30 PM )" />
                 </LinearLayout>
             </RelativeLayout>
-        </androidx.cardview.widget.CardView>
+        </androidx.cardview.widget.CardView> -->
 
     </LinearLayout>
 <!--
