--- a/app/src/main/res/layout/profile_page.xml
+++ b/app/src/main/res/layout/profile_page.xml
@@ -74,6 +74,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
+        <TextView
+            android:id="@+id/alert"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat"
+            android:text="@string/alert"
+            android:textColor="#FF0000"
+            android:textSize="15sp"
+            android:textStyle="normal"
+            android:visibility="gone"
+            />
 
         <LinearLayout
             android:layout_width="350dp"
